--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
-            background-image: linear-gradient(45deg, cyan, yellow);
+            background-image: linear-gradient(45deg, rgb(55, 0, 255), rgb(0, 153, 255));
             text-align: center;
             color: white;
         }
@@ -24,18 +24,18 @@
         a{
             text-decoration: none;
             color: white;
-            border: 3px solid dodgerblue;
+            border: 3px solid rgb(30, 53, 255);
             border-radius: 10px;
             padding: 10px;
         }
         a:hover{
-            background-color: dodgerblue;
+            background-color: rgb(98, 30, 255);
         }
     </style>
 </head>
 <body>
-    <h1>Prova dia 18/10/2022</h1>
-    <h2>Estudem html, css, php, mysql</h2>
+    <h1>IFAC</h1>
+    <h2>Pratica de programaçao</h2>
 
     <div class="box">
         <a href="tela_login.php">Login</a>
