--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body{
             font-family: Arial, Helvetica, sans-serif;
-            background-image: linear-gradient(45deg, rgb(55, 0, 255), rgb(89, 0, 255));
+            background-image: linear-gradient(45deg, rgb(140, 0, 255), rgb(89, 0, 255));
             text-align: center;
             color: white;
         }
@@ -24,12 +24,12 @@
         a{
             text-decoration: none;
             color: white;
-            border: 3px solid rgb(98, 30, 255);
+            border: 3px solid rgba(173, 30, 255, 0.418);
             border-radius: 10px;
             padding: 10px;
         }
         a:hover{
-            background-color: rgb(79, 30, 255);
+            background-color: rgba(175, 155, 248, 0.37);
         }
     </style>
 </head>
